<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.rubisoft.precioluz2.Activities.Configuracion">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView_Configuracion">

            <RadioButton
                android:id="@+id/radioButton_tarifa20A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarifa_20A"
                app:layout_constraintStart_toStartOf="@+id/radioButton_tarifa20DHA"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <RadioButton
                android:id="@+id/radioButton_tarifa20DHA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarifa_20DHA"
                app:layout_constraintStart_toStartOf="@+id/radioButton_tarifa20DHS"
                app:layout_constraintTop_toBottomOf="@+id/radioButton_tarifa20A" />

            <RadioButton
                android:id="@+id/radioButton_tarifa20DHS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tarifa_20DHS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioButton_tarifa20DHA" />
        </RadioGroup>
        <CheckBox
            android:id="@+id/checkBox_hace_una_semana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/precios_hace_una_semana"
            app:layout_constraintStart_toStartOf="@+id/checkBox_hace_un_año"
            app:layout_constraintTop_toBottomOf="@+id/RadioGroup" />

        <CheckBox
            android:id="@+id/checkBox_hace_un_año"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/precios_hace_un_año"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_hace_una_semana" />

        <TextView
            android:id="@+id/TextView_Configuracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/configuracion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:text="@string/Guardar"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_hace_un_año" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>
