<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruben.precioluz2.Activities.ValorarActivity">

    <TextView
        android:id="@+id/Layout_feedback_TextView_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/Pregunta"
        android:textIsSelectable="true"
        android:textSize="@dimen/tamaño_letra_titulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/Layout_feedback_RadioGroup_me_gusta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout_feedback_TextView_titulo">

        <RadioButton
            android:id="@+id/Layout_feedback_RadioButton_si_me_gusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/si"

            android:textColor="@color/gris" />

        <RadioButton
            android:id="@+id/Layout_feedback_RadioButton_no_me_gusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/no"

            android:textColor="@color/gris" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/LinearLayout_mejorar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout_feedback_RadioGroup_me_gusta">

        <EditText
            android:id="@+id/Layout_feedback_EditText_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="@string/Peticion"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLength="290"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Layout_feedback_Button_enviar_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enviar"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Valorar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout_feedback_RadioGroup_me_gusta">

        <TextView
            android:id="@+id/Layout_feedback_TextView_rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/valorenos"
            android:textIsSelectable="true" />

        <Button
            android:id="@+id/Layout_feedback_Button_rate_app"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:cropToPadding="false"
            android:focusable="false"
            android:scaleType="centerInside"
            android:text="@string/Valorar"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
