<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruben.precioluz2.Activities.AvisosActivity">

    <TextView
        android:id="@+id/TextView_Aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/Crear_aviso"
        android:textSize="@dimen/tamaño_letra_titulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_Activa_Aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Crear_aviso_mañana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Aviso" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_Activa_Aviso">

        <RadioButton
            android:id="@+id/radioButton_mejor_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mejor_precio"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="211dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton_peor_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Peor_precio"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="211dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView_Antelacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Antelacion"
        app:layout_constraintEnd_toStartOf="@+id/spinner_antelacion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spinner_antelacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_Antelacion"
        app:layout_constraintTop_toTopOf="@+id/textView_Antelacion" />

</android.support.constraint.ConstraintLayout>
